--- a/src/EventServer.Mvc3/Views/Shared/Posts.cshtml
+++ b/src/EventServer.Mvc3/Views/Shared/Posts.cshtml
@@ -8,7 +8,7 @@
     {
     <div class="post">
         <h1 class="title">
-            @Html.DisplayFor(modelItem => item.Title)
+            @Html.DisplayFor(modelItem => item.Title)</h1>
             <p class="byline">
                 <small>@Html.DisplayFor(modelItem => item.DateCreated.ToLongDateString())</small></p>
             <div class="entry">
